force-app/main/default/objects/Callista_Country_Code__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify that the country is deemed high risk which will be used in various validations for International applicants.</description>
        <inlineHelpText>To identify that the country is deemed high risk.</inlineHelpText>
        <label>High Risk</label>
        <type>Checkbox</type>
    </fields>
    <label>Callista Country Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Code__c</columns>
        <columns>High_Risk__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>